smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/traits-on-apply.smithy
// Syntax error at line 7, column 1: Traits applied to apply statement
namespace com.foo

string Foo

@deprecated
apply Foo @deprecated
